Mile/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> SourceFile
Rule 1     SourceFile -> PackageClause SEMICOLON ImportDecl_curl TopLevelDecl_curl
Rule 2     OpenS -> <empty>
Rule 3     CloseS -> <empty>
Rule 4     OpenStructS -> <empty>
Rule 5     CloseStructS -> <empty>
Rule 6     TopLevelDecl_curl -> TopLevelDecl_curl TopLevelDecl SEMICOLON
Rule 7     TopLevelDecl_curl -> <empty>
Rule 8     ImportDecl_curl -> ImportDecl_curl ImportDecl SEMICOLON
Rule 9     ImportDecl_curl -> <empty>
Rule 10    PackageClause -> PACKAGE ID
Rule 11    ImportDecl -> IMPORT ImportSpec
Rule 12    ImportDecl -> IMPORT LPAREN ImportSpec_curl RPAREN
Rule 13    ImportSpec_curl -> ImportSpec_curl ImportSpec SEMICOLON
Rule 14    ImportSpec_curl -> <empty>
Rule 15    ImportSpec -> ID ImportPath
Rule 16    ImportSpec -> ImportPath
Rule 17    ImportPath -> STRING
Rule 18    TopLevelDecl -> Declaration
Rule 19    TopLevelDecl -> FunctionDecl
Rule 20    Declaration -> ConstDecl
Rule 21    Declaration -> StructDecl
Rule 22    Declaration -> VarDecl
Rule 23    ConstDecl -> CONST ConstSpec
Rule 24    ConstDecl -> CONST LPAREN ConstSpec_curl RPAREN
Rule 25    ConstSpec_curl -> ConstSpec_curl ConstSpec SEMICOLON
Rule 26    ConstSpec_curl -> <empty>
Rule 27    ConstSpec -> IdentifierList ID ASSIGN ExpressionList
Rule 28    IdentifierList -> ID
Rule 29    IdentifierList -> ID COMMA IdentifierList
Rule 30    ExpressionList -> Expression
Rule 31    ExpressionList -> ExpressionList COMMA Expression
Rule 32    StructDecl -> TYPE StructName StructType
Rule 33    StructName -> ID
Rule 34    VarDecl -> VAR VarSpec
Rule 35    VarDecl -> VAR LPAREN VarSpec_curl RPAREN
Rule 36    VarSpec_curl -> VarSpec_curl VarSpec SEMICOLON
Rule 37    VarSpec_curl -> <empty>
Rule 38    VarSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 39    VarSpec -> IdentifierList ID ASSIGN ExpressionList
Rule 40    VarSpec -> IdentifierList ASSIGN ExpressionList
Rule 41    VarSpec -> IdentifierList ID
Rule 42    VarSpec -> IdentifierList Type
Rule 43    FunctionDecl -> FUNC FuncName OpenS Signature Block CloseS
Rule 44    FuncName -> ID
Rule 45    Type -> LPAREN Type RPAREN
Rule 46    Type -> LPAREN ID RPAREN
Rule 47    Type -> TypeLit
Rule 48    TypeLit -> ArrayType
Rule 49    TypeLit -> PointerType
Rule 50    TypeLit -> SliceType
Rule 51    ArrayType -> LBRACK INT RBRACK Type
Rule 52    ArrayType -> LBRACK INT RBRACK ID
Rule 53    SliceType -> LBRACK RBRACK Type
Rule 54    SliceType -> LBRACK RBRACK ID
Rule 55    StructType -> STRUCT OpenStructS LBRACE FieldDecl_curl RBRACE CloseStructS
Rule 56    FieldDecl_curl -> FieldDecl_curl FieldDecl SEMICOLON
Rule 57    FieldDecl_curl -> <empty>
Rule 58    FieldDecl -> ID COMMA IdentifierList Type
Rule 59    FieldDecl -> ID COMMA IdentifierList ID
Rule 60    FieldDecl -> ID Type
Rule 61    FieldDecl -> ID ID
Rule 62    FieldDecl -> ID STRUCT MUL ID
Rule 63    FieldDecl -> ID COMMA IdentifierList STRUCT MUL ID
Rule 64    PointerType -> MUL Type
Rule 65    PointerType -> MUL ID
Rule 66    Signature -> Parameters Result
Rule 67    Result -> LPAREN TypeList RPAREN
Rule 68    Result -> <empty>
Rule 69    TypeList -> ID
Rule 70    TypeList -> Type
Rule 71    TypeList -> TypeList COMMA ID
Rule 72    TypeList -> TypeList COMMA Type
Rule 73    Parameters -> LPAREN RPAREN
Rule 74    Parameters -> LPAREN ParameterList RPAREN
Rule 75    Parameters -> LPAREN ParameterList COMMA RPAREN
Rule 76    ParameterList -> ParameterDecl
Rule 77    ParameterList -> ParameterList COMMA ParameterDecl
Rule 78    ParameterDecl -> ParaIdList Type
Rule 79    ParameterDecl -> ID Type
Rule 80    ParameterDecl -> ParaIdList ID
Rule 81    ParameterDecl -> ID ID
Rule 82    ParaIdList -> ID COMMA ID
Rule 83    ParaIdList -> ParaIdList COMMA ID
Rule 84    Block -> LBRACE StatementList RBRACE
Rule 85    StatementList -> Statement_curl
Rule 86    Statement_curl -> Statement_curl Statement SEMICOLON
Rule 87    Statement_curl -> <empty>
Rule 88    Expression -> UnaryExpr
Rule 89    Expression -> Expression BinaryOp UnaryExpr
Rule 90    UnaryExpr -> PrimaryExpr
Rule 91    UnaryExpr -> UnaryOp UnaryExpr
Rule 92    BinaryOp -> LOR
Rule 93    BinaryOp -> LAND
Rule 94    BinaryOp -> RelOp
Rule 95    BinaryOp -> AddOp
Rule 96    BinaryOp -> MulOp
Rule 97    RelOp -> EQL
Rule 98    RelOp -> NEQ
Rule 99    RelOp -> LTN
Rule 100   RelOp -> LEQ
Rule 101   RelOp -> GTN
Rule 102   RelOp -> GEQ
Rule 103   AddOp -> ADD
Rule 104   AddOp -> SUB
Rule 105   AddOp -> OR
Rule 106   AddOp -> XOR
Rule 107   MulOp -> MUL
Rule 108   MulOp -> DIV
Rule 109   MulOp -> MOD
Rule 110   MulOp -> SHL
Rule 111   MulOp -> SHR
Rule 112   MulOp -> AND
Rule 113   MulOp -> AND_NOT
Rule 114   UnaryOp -> ADD
Rule 115   UnaryOp -> SUB
Rule 116   UnaryOp -> NOT
Rule 117   UnaryOp -> XOR
Rule 118   UnaryOp -> MUL
Rule 119   UnaryOp -> AND
Rule 120   PrimaryExpr -> Literal
Rule 121   PrimaryExpr -> ID
Rule 122   PrimaryExpr -> PrimaryExpr DOT ID
Rule 123   PrimaryExpr -> LPAREN Expression RPAREN
Rule 124   PrimaryExpr -> PrimaryExpr Index
Rule 125   PrimaryExpr -> PrimaryExpr Slice
Rule 126   PrimaryExpr -> PrimaryExpr Arguments
Rule 127   Index -> LBRACK Expression RBRACK
Rule 128   Slice -> LBRACK Expression COLON Expression RBRACK
Rule 129   Slice -> LBRACK COLON Expression RBRACK
Rule 130   Slice -> LBRACK Expression COLON RBRACK
Rule 131   Slice -> LBRACK COLON RBRACK
Rule 132   Slice -> LBRACK Expression COLON Expression COLON Expression RBRACK
Rule 133   Slice -> LBRACK COLON Expression COLON Expression RBRACK
Rule 134   Arguments -> LPAREN RPAREN
Rule 135   Arguments -> LPAREN ExpressionList RPAREN
Rule 136   Arguments -> LPAREN ExpressionList COMMA RPAREN
Rule 137   Literal -> BasicLit
Rule 138   BasicLit -> IntLit
Rule 139   BasicLit -> FloatLit
Rule 140   BasicLit -> RuneLit
Rule 141   BasicLit -> StringLit
Rule 142   BasicLit -> TrueLit
Rule 143   BasicLit -> FalseLit
Rule 144   TrueLit -> TRUE
Rule 145   FalseLit -> FALSE
Rule 146   IntLit -> INT
Rule 147   FloatLit -> FLOAT
Rule 148   RuneLit -> RUNE
Rule 149   StringLit -> STRING
Rule 150   Statement -> Declaration
Rule 151   Statement -> LabelledStmt
Rule 152   Statement -> SimpleStmt
Rule 153   Statement -> ReturnStmt
Rule 154   Statement -> BreakStmt
Rule 155   Statement -> ContinueStmt
Rule 156   Statement -> GotoStmt
Rule 157   Statement -> FallthroughStmt
Rule 158   Statement -> IfStmt
Rule 159   Statement -> OpenS Block CloseS
Rule 160   Statement -> SwitchStmt
Rule 161   Statement -> ForStmt
Rule 162   SimpleStmt -> Expression
Rule 163   SimpleStmt -> IncDecStmt
Rule 164   SimpleStmt -> Assignment
Rule 165   SimpleStmt -> ShortVarDecl
Rule 166   SimpleStmt -> <empty>
Rule 167   IncDecStmt -> Expression INC
Rule 168   IncDecStmt -> Expression DEC
Rule 169   Assignment -> ExpressionList AssignOp ExpressionList
Rule 170   AssignOp -> ADD_ASSIGN
Rule 171   AssignOp -> SUB_ASSIGN
Rule 172   AssignOp -> MUL_ASSIGN
Rule 173   AssignOp -> DIV_ASSIGN
Rule 174   AssignOp -> MOD_ASSIGN
Rule 175   AssignOp -> OR_ASSIGN
Rule 176   AssignOp -> XOR_ASSIGN
Rule 177   AssignOp -> SHL_ASSIGN
Rule 178   AssignOp -> SHR_ASSIGN
Rule 179   AssignOp -> ASSIGN
Rule 180   LabelledStmt -> ID COLON Statement
Rule 181   ReturnStmt -> RETURN ExpressionList
Rule 182   ReturnStmt -> RETURN
Rule 183   BreakStmt -> BREAK ID
Rule 184   BreakStmt -> BREAK
Rule 185   ContinueStmt -> CONTINUE ID
Rule 186   ContinueStmt -> CONTINUE
Rule 187   GotoStmt -> GOTO ID
Rule 188   FallthroughStmt -> FALLTHROUGH
Rule 189   ShortVarDecl -> IdentifierList DEFINE ExpressionList
Rule 190   IfStmt -> IF OpenS Expression Block CloseS
Rule 191   IfStmt -> IF OpenS Expression Block CloseS ELSE IfStmt
Rule 192   IfStmt -> IF OpenS Expression Block CloseS ELSE OpenS Block CloseS
Rule 193   SwitchStmt -> SWITCH ExpressionName LBRACE OpenW ExprCaseClause_curl CloseW RBRACE
Rule 194   ExpressionName -> Expression
Rule 195   ExprCaseClause_curl -> ExprCaseClause ExprCaseClause_curl
Rule 196   ExprCaseClause_curl -> DefCaseClause
Rule 197   ExprCaseClause_curl -> ExprCaseClause
Rule 198   ExprCaseClause -> OpenS CASE Expression COLON StatementList CloseS
Rule 199   DefCaseClause -> DEFAULT COLON OpenS StatementList CloseS
Rule 200   ForStmt -> FOR OpenS OpenF Expression Block CloseF CloseS
Rule 201   ForStmt -> FOR OpenS OpenF ForClause Block CloseF CloseS
Rule 202   ForStmt -> FOR OpenS OpenF Block CloseF CloseS
Rule 203   OpenF -> <empty>
Rule 204   CloseF -> <empty>
Rule 205   OpenW -> <empty>
Rule 206   CloseW -> <empty>
Rule 207   ForClause -> SimpleStmt SEMICOLON SEMICOLON SimpleStmt
Rule 208   ForClause -> SimpleStmt SEMICOLON Expression SEMICOLON SimpleStmt

Terminals, with rules where they appear

ADD                  : 103 114
ADD_ASSIGN           : 170
AND                  : 112 119
AND_NOT              : 113
ASSIGN               : 27 38 39 40 179
BREAK                : 183 184
CASE                 : 198
COLON                : 128 129 130 131 132 132 133 133 180 198 199
COMMA                : 29 31 58 59 63 71 72 75 77 82 83 136
CONST                : 23 24
CONTINUE             : 185 186
DEC                  : 168
DEFAULT              : 199
DEFINE               : 189
DIV                  : 108
DIV_ASSIGN           : 173
DOT                  : 122
ELSE                 : 191 192
EQL                  : 97
FALLTHROUGH          : 188
FALSE                : 145
FLOAT                : 147
FOR                  : 200 201 202
FUNC                 : 43
GEQ                  : 102
GOTO                 : 187
GTN                  : 101
ID                   : 10 15 27 28 29 33 39 41 44 46 52 54 58 59 59 60 61 61 62 62 63 63 65 69 71 79 80 81 81 82 82 83 121 122 180 183 185 187
IF                   : 190 191 192
IMPORT               : 11 12
INC                  : 167
INT                  : 51 52 146
LAND                 : 93
LBRACE               : 55 84 193
LBRACK               : 51 52 53 54 127 128 129 130 131 132 133
LEQ                  : 100
LOR                  : 92
LPAREN               : 12 24 35 45 46 67 73 74 75 123 134 135 136
LTN                  : 99
MOD                  : 109
MOD_ASSIGN           : 174
MUL                  : 62 63 64 65 107 118
MUL_ASSIGN           : 172
NEQ                  : 98
NOT                  : 116
OR                   : 105
OR_ASSIGN            : 175
PACKAGE              : 10
RBRACE               : 55 84 193
RBRACK               : 51 52 53 54 127 128 129 130 131 132 133
RETURN               : 181 182
RPAREN               : 12 24 35 45 46 67 73 74 75 123 134 135 136
RUNE                 : 148
SEMICOLON            : 1 6 8 13 25 36 56 86 207 207 208 208
SHL                  : 110
SHL_ASSIGN           : 177
SHR                  : 111
SHR_ASSIGN           : 178
STRING               : 17 149
STRUCT               : 55 62 63
SUB                  : 104 115
SUB_ASSIGN           : 171
SWITCH               : 193
TRUE                 : 144
TYPE                 : 32
VAR                  : 34 35
XOR                  : 106 117
XOR_ASSIGN           : 176
error                : 

Nonterminals, with rules where they appear

AddOp                : 95
Arguments            : 126
ArrayType            : 48
AssignOp             : 169
Assignment           : 164
BasicLit             : 137
BinaryOp             : 89
Block                : 43 159 190 191 192 192 200 201 202
BreakStmt            : 154
CloseF               : 200 201 202
CloseS               : 43 159 190 191 192 192 198 199 200 201 202
CloseStructS         : 55
CloseW               : 193
ConstDecl            : 20
ConstSpec            : 23 25
ConstSpec_curl       : 24 25
ContinueStmt         : 155
Declaration          : 18 150
DefCaseClause        : 196
ExprCaseClause       : 195 197
ExprCaseClause_curl  : 193 195
Expression           : 30 31 89 123 127 128 128 129 130 132 132 132 133 133 162 167 168 190 191 192 194 198 200 208
ExpressionList       : 27 31 38 39 40 135 136 169 169 181 189
ExpressionName       : 193
FallthroughStmt      : 157
FalseLit             : 143
FieldDecl            : 56
FieldDecl_curl       : 55 56
FloatLit             : 139
ForClause            : 201
ForStmt              : 161
FuncName             : 43
FunctionDecl         : 19
GotoStmt             : 156
IdentifierList       : 27 29 38 39 40 41 42 58 59 63 189
IfStmt               : 158 191
ImportDecl           : 8
ImportDecl_curl      : 1 8
ImportPath           : 15 16
ImportSpec           : 11 13
ImportSpec_curl      : 12 13
IncDecStmt           : 163
Index                : 124
IntLit               : 138
LabelledStmt         : 151
Literal              : 120
MulOp                : 96
OpenF                : 200 201 202
OpenS                : 43 159 190 191 192 192 198 199 200 201 202
OpenStructS          : 55
OpenW                : 193
PackageClause        : 1
ParaIdList           : 78 80 83
ParameterDecl        : 76 77
ParameterList        : 74 75 77
Parameters           : 66
PointerType          : 49
PrimaryExpr          : 90 122 124 125 126
RelOp                : 94
Result               : 66
ReturnStmt           : 153
RuneLit              : 140
ShortVarDecl         : 165
Signature            : 43
SimpleStmt           : 152 207 207 208 208
Slice                : 125
SliceType            : 50
SourceFile           : 0
Statement            : 86 180
StatementList        : 84 198 199
Statement_curl       : 85 86
StringLit            : 141
StructDecl           : 21
StructName           : 32
StructType           : 32
SwitchStmt           : 160
TopLevelDecl         : 6
TopLevelDecl_curl    : 1 6
TrueLit              : 142
Type                 : 38 42 45 51 53 58 60 64 70 72 78 79
TypeList             : 67 71 72
TypeLit              : 47
UnaryExpr            : 88 89 91
UnaryOp              : 91
VarDecl              : 22
VarSpec              : 34 36
VarSpec_curl         : 35 36

Parsing method: LALR

state 0

    (0) S' -> . SourceFile
    (1) SourceFile -> . PackageClause SEMICOLON ImportDecl_curl TopLevelDecl_curl
    (10) PackageClause -> . PACKAGE ID

    PACKAGE         shift and go to state 3

    PackageClause                  shift and go to state 1
    SourceFile                     shift and go to state 2

state 1

    (1) SourceFile -> PackageClause . SEMICOLON ImportDecl_curl TopLevelDecl_curl

    SEMICOLON       shift and go to state 4


state 2

    (0) S' -> SourceFile .



state 3

    (10) PackageClause -> PACKAGE . ID

    ID              shift and go to state 5


state 4

    (1) SourceFile -> PackageClause SEMICOLON . ImportDecl_curl TopLevelDecl_curl
    (8) ImportDecl_curl -> . ImportDecl_curl ImportDecl SEMICOLON
    (9) ImportDecl_curl -> .

    IMPORT          reduce using rule 9 (ImportDecl_curl -> .)
    FUNC            reduce using rule 9 (ImportDecl_curl -> .)
    CONST           reduce using rule 9 (ImportDecl_curl -> .)
    TYPE            reduce using rule 9 (ImportDecl_curl -> .)
    VAR             reduce using rule 9 (ImportDecl_curl -> .)
    $end            reduce using rule 9 (ImportDecl_curl -> .)

    ImportDecl_curl                shift and go to state 6

state 5

    (10) PackageClause -> PACKAGE ID .

    SEMICOLON       reduce using rule 10 (PackageClause -> PACKAGE ID .)


state 6

    (1) SourceFile -> PackageClause SEMICOLON ImportDecl_curl . TopLevelDecl_curl
    (8) ImportDecl_curl -> ImportDecl_curl . ImportDecl SEMICOLON
    (6) TopLevelDecl_curl -> . TopLevelDecl_curl TopLevelDecl SEMICOLON
    (7) TopLevelDecl_curl -> .
    (11) ImportDecl -> . IMPORT ImportSpec
    (12) ImportDecl -> . IMPORT LPAREN ImportSpec_curl RPAREN

    FUNC            reduce using rule 7 (TopLevelDecl_curl -> .)
    CONST           reduce using rule 7 (TopLevelDecl_curl -> .)
    TYPE            reduce using rule 7 (TopLevelDecl_curl -> .)
    VAR             reduce using rule 7 (TopLevelDecl_curl -> .)
    $end            reduce using rule 7 (TopLevelDecl_curl -> .)
    IMPORT          shift and go to state 8

    TopLevelDecl_curl              shift and go to state 7
    ImportDecl                     shift and go to state 9

state 7

    (1) SourceFile -> PackageClause SEMICOLON ImportDecl_curl TopLevelDecl_curl .
    (6) TopLevelDecl_curl -> TopLevelDecl_curl . TopLevelDecl SEMICOLON
    (18) TopLevelDecl -> . Declaration
    (19) TopLevelDecl -> . FunctionDecl
    (20) Declaration -> . ConstDecl
    (21) Declaration -> . StructDecl
    (22) Declaration -> . VarDecl
    (43) FunctionDecl -> . FUNC FuncName OpenS Signature Block CloseS
    (23) ConstDecl -> . CONST ConstSpec
    (24) ConstDecl -> . CONST LPAREN ConstSpec_curl RPAREN
    (32) StructDecl -> . TYPE StructName StructType
    (34) VarDecl -> . VAR VarSpec
    (35) VarDecl -> . VAR LPAREN VarSpec_curl RPAREN

    $end            reduce using rule 1 (SourceFile -> PackageClause SEMICOLON ImportDecl_curl TopLevelDecl_curl .)
    FUNC            shift and go to state 15
    CONST           shift and go to state 10
    TYPE            shift and go to state 19
    VAR             shift and go to state 16

    StructDecl                     shift and go to state 11
    VarDecl                        shift and go to state 18
    FunctionDecl                   shift and go to state 12
    TopLevelDecl                   shift and go to state 13
    Declaration                    shift and go to state 14
    ConstDecl                      shift and go to state 17

state 8

    (11) ImportDecl -> IMPORT . ImportSpec
    (12) ImportDecl -> IMPORT . LPAREN ImportSpec_curl RPAREN
    (15) ImportSpec -> . ID ImportPath
    (16) ImportSpec -> . ImportPath
    (17) ImportPath -> . STRING

    LPAREN          shift and go to state 23
    ID              shift and go to state 24
    STRING          shift and go to state 20

    ImportSpec                     shift and go to state 21
    ImportPath                     shift and go to state 22

state 9

    (8) ImportDecl_curl -> ImportDecl_curl ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 25


state 10

    (23) ConstDecl -> CONST . ConstSpec
    (24) ConstDecl -> CONST . LPAREN ConstSpec_curl RPAREN
    (27) ConstSpec -> . IdentifierList ID ASSIGN ExpressionList
    (28) IdentifierList -> . ID
    (29) IdentifierList -> . ID COMMA IdentifierList

    LPAREN          shift and go to state 27
    ID              shift and go to state 29

    ConstSpec                      shift and go to state 26
    IdentifierList                 shift and go to state 28

state 11

    (21) Declaration -> StructDecl .

    SEMICOLON       reduce using rule 21 (Declaration -> StructDecl .)


state 12

    (19) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 19 (TopLevelDecl -> FunctionDecl .)


state 13

    (6) TopLevelDecl_curl -> TopLevelDecl_curl TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 30


state 14

    (18) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 18 (TopLevelDecl -> Declaration .)


state 15

    (43) FunctionDecl -> FUNC . FuncName OpenS Signature Block CloseS
    (44) FuncName -> . ID

    ID              shift and go to state 32

    FuncName                       shift and go to state 31

state 16

    (34) VarDecl -> VAR . VarSpec
    (35) VarDecl -> VAR . LPAREN VarSpec_curl RPAREN
    (38) VarSpec -> . IdentifierList Type ASSIGN ExpressionList
    (39) VarSpec -> . IdentifierList ID ASSIGN ExpressionList
    (40) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (41) VarSpec -> . IdentifierList ID
    (42) VarSpec -> . IdentifierList Type
    (28) IdentifierList -> . ID
    (29) IdentifierList -> . ID COMMA IdentifierList

    LPAREN          shift and go to state 34
    ID              shift and go to state 29

    VarSpec                        shift and go to state 33
    IdentifierList                 shift and go to state 35

state 17

    (20) Declaration -> ConstDecl .

    SEMICOLON       reduce using rule 20 (Declaration -> ConstDecl .)


state 18

    (22) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 22 (Declaration -> VarDecl .)


state 19

    (32) StructDecl -> TYPE . StructName StructType
    (33) StructName -> . ID

    ID              shift and go to state 37

    StructName                     shift and go to state 36

state 20

    (17) ImportPath -> STRING .

    SEMICOLON       reduce using rule 17 (ImportPath -> STRING .)


state 21

    (11) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 11 (ImportDecl -> IMPORT ImportSpec .)


state 22

    (16) ImportSpec -> ImportPath .

    SEMICOLON       reduce using rule 16 (ImportSpec -> ImportPath .)


state 23

    (12) ImportDecl -> IMPORT LPAREN . ImportSpec_curl RPAREN
    (13) ImportSpec_curl -> . ImportSpec_curl ImportSpec SEMICOLON
    (14) ImportSpec_curl -> .

    RPAREN          reduce using rule 14 (ImportSpec_curl -> .)
    ID              reduce using rule 14 (ImportSpec_curl -> .)
    STRING          reduce using rule 14 (ImportSpec_curl -> .)

    ImportSpec_curl                shift and go to state 38

state 24

    (15) ImportSpec -> ID . ImportPath
    (17) ImportPath -> . STRING

    STRING          shift and go to state 20

    ImportPath                     shift and go to state 39

state 25

    (8) ImportDecl_curl -> ImportDecl_curl ImportDecl SEMICOLON .

    IMPORT          reduce using rule 8 (ImportDecl_curl -> ImportDecl_curl ImportDecl SEMICOLON .)
    FUNC            reduce using rule 8 (ImportDecl_curl -> ImportDecl_curl ImportDecl SEMICOLON .)
    CONST           reduce using rule 8 (ImportDecl_curl -> ImportDecl_curl ImportDecl SEMICOLON .)
    TYPE            reduce using rule 8 (ImportDecl_curl -> ImportDecl_curl ImportDecl SEMICOLON .)
    VAR             reduce using rule 8 (ImportDecl_curl -> ImportDecl_curl ImportDecl SEMICOLON .)
    $end            reduce using rule 8 (ImportDecl_curl -> ImportDecl_curl ImportDecl SEMICOLON .)


state 26

    (23) ConstDecl -> CONST ConstSpec .

    SEMICOLON       reduce using rule 23 (ConstDecl -> CONST ConstSpec .)


state 27

    (24) ConstDecl -> CONST LPAREN . ConstSpec_curl RPAREN
    (25) ConstSpec_curl -> . ConstSpec_curl ConstSpec SEMICOLON
    (26) ConstSpec_curl -> .

    RPAREN          reduce using rule 26 (ConstSpec_curl -> .)
    ID              reduce using rule 26 (ConstSpec_curl -> .)

    ConstSpec_curl                 shift and go to state 40

state 28

    (27) ConstSpec -> IdentifierList . ID ASSIGN ExpressionList

    ID              shift and go to state 41


state 29

    (28) IdentifierList -> ID .
    (29) IdentifierList -> ID . COMMA IdentifierList

    ID              reduce using rule 28 (IdentifierList -> ID .)
    ASSIGN          reduce using rule 28 (IdentifierList -> ID .)
    LPAREN          reduce using rule 28 (IdentifierList -> ID .)
    LBRACK          reduce using rule 28 (IdentifierList -> ID .)
    MUL             reduce using rule 28 (IdentifierList -> ID .)
    STRUCT          reduce using rule 28 (IdentifierList -> ID .)
    DEFINE          reduce using rule 28 (IdentifierList -> ID .)
    COMMA           shift and go to state 42


state 30

    (6) TopLevelDecl_curl -> TopLevelDecl_curl TopLevelDecl SEMICOLON .

    FUNC            reduce using rule 6 (TopLevelDecl_curl -> TopLevelDecl_curl TopLevelDecl SEMICOLON .)
    CONST           reduce using rule 6 (TopLevelDecl_curl -> TopLevelDecl_curl TopLevelDecl SEMICOLON .)
    TYPE            reduce using rule 6 (TopLevelDecl_curl -> TopLevelDecl_curl TopLevelDecl SEMICOLON .)
    VAR             reduce using rule 6 (TopLevelDecl_curl -> TopLevelDecl_curl TopLevelDecl SEMICOLON .)
    $end            reduce using rule 6 (TopLevelDecl_curl -> TopLevelDecl_curl TopLevelDecl SEMICOLON .)


state 31

    (43) FunctionDecl -> FUNC FuncName . OpenS Signature Block CloseS
    (2) OpenS -> .

    LPAREN          reduce using rule 2 (OpenS -> .)

    OpenS                          shift and go to state 43

state 32

    (44) FuncName -> ID .

    LPAREN          reduce using rule 44 (FuncName -> ID .)


state 33

    (34) VarDecl -> VAR VarSpec .

    SEMICOLON       reduce using rule 34 (VarDecl -> VAR VarSpec .)


state 34

    (35) VarDecl -> VAR LPAREN . VarSpec_curl RPAREN
    (36) VarSpec_curl -> . VarSpec_curl VarSpec SEMICOLON
    (37) VarSpec_curl -> .

    RPAREN          reduce using rule 37 (VarSpec_curl -> .)
    ID              reduce using rule 37 (VarSpec_curl -> .)

    VarSpec_curl                   shift and go to state 44

state 35

    (38) VarSpec -> IdentifierList . Type ASSIGN ExpressionList
    (39) VarSpec -> IdentifierList . ID ASSIGN ExpressionList
    (40) VarSpec -> IdentifierList . ASSIGN ExpressionList
    (41) VarSpec -> IdentifierList . ID
    (42) VarSpec -> IdentifierList . Type
    (45) Type -> . LPAREN Type RPAREN
    (46) Type -> . LPAREN ID RPAREN
    (47) Type -> . TypeLit
    (48) TypeLit -> . ArrayType
    (49) TypeLit -> . PointerType
    (50) TypeLit -> . SliceType
    (51) ArrayType -> . LBRACK INT RBRACK Type
    (52) ArrayType -> . LBRACK INT RBRACK ID
    (64) PointerType -> . MUL Type
    (65) PointerType -> . MUL ID
    (53) SliceType -> . LBRACK RBRACK Type
    (54) SliceType -> . LBRACK RBRACK ID

    ID              shift and go to state 53
    ASSIGN          shift and go to state 48
    LPAREN          shift and go to state 49
    LBRACK          shift and go to state 46
    MUL             shift and go to state 51

    Type                           shift and go to state 52
    ArrayType                      shift and go to state 47
    PointerType                    shift and go to state 50
    TypeLit                        shift and go to state 45
    SliceType                      shift and go to state 54

state 36

    (32) StructDecl -> TYPE StructName . StructType
    (55) StructType -> . STRUCT OpenStructS LBRACE FieldDecl_curl RBRACE CloseStructS

    STRUCT          shift and go to state 56

    StructType                     shift and go to state 55

state 37

    (33) StructName -> ID .

    STRUCT          reduce using rule 33 (StructName -> ID .)


state 38

    (12) ImportDecl -> IMPORT LPAREN ImportSpec_curl . RPAREN
    (13) ImportSpec_curl -> ImportSpec_curl . ImportSpec SEMICOLON
    (15) ImportSpec -> . ID ImportPath
    (16) ImportSpec -> . ImportPath
    (17) ImportPath -> . STRING

    RPAREN          shift and go to state 57
    ID              shift and go to state 24
    STRING          shift and go to state 20

    ImportSpec                     shift and go to state 58
    ImportPath                     shift and go to state 22

state 39

    (15) ImportSpec -> ID ImportPath .

    SEMICOLON       reduce using rule 15 (ImportSpec -> ID ImportPath .)


state 40

    (24) ConstDecl -> CONST LPAREN ConstSpec_curl . RPAREN
    (25) ConstSpec_curl -> ConstSpec_curl . ConstSpec SEMICOLON
    (27) ConstSpec -> . IdentifierList ID ASSIGN ExpressionList
    (28) IdentifierList -> . ID
    (29) IdentifierList -> . ID COMMA IdentifierList

    RPAREN          shift and go to state 59
    ID              shift and go to state 29

    ConstSpec                      shift and go to state 60
    IdentifierList                 shift and go to state 28

state 41

    (27) ConstSpec -> IdentifierList ID . ASSIGN ExpressionList

    ASSIGN          shift and go to state 61


state 42

    (29) IdentifierList -> ID COMMA . IdentifierList
    (28) IdentifierList -> . ID
    (29) IdentifierList -> . ID COMMA IdentifierList

    ID              shift and go to state 29

    IdentifierList                 shift and go to state 62

state 43

    (43) FunctionDecl -> FUNC FuncName OpenS . Signature Block CloseS
    (66) Signature -> . Parameters Result
    (73) Parameters -> . LPAREN RPAREN
    (74) Parameters -> . LPAREN ParameterList RPAREN
    (75) Parameters -> . LPAREN ParameterList COMMA RPAREN

    LPAREN          shift and go to state 63

    Parameters                     shift and go to state 64
    Signature                      shift and go to state 65

state 44

    (35) VarDecl -> VAR LPAREN VarSpec_curl . RPAREN
    (36) VarSpec_curl -> VarSpec_curl . VarSpec SEMICOLON
    (38) VarSpec -> . IdentifierList Type ASSIGN ExpressionList
    (39) VarSpec -> . IdentifierList ID ASSIGN ExpressionList
    (40) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (41) VarSpec -> . IdentifierList ID
    (42) VarSpec -> . IdentifierList Type
    (28) IdentifierList -> . ID
    (29) IdentifierList -> . ID COMMA IdentifierList

    RPAREN          shift and go to state 66
    ID              shift and go to state 29

    VarSpec                        shift and go to state 67
    IdentifierList                 shift and go to state 35

state 45

    (47) Type -> TypeLit .

    ASSIGN          reduce using rule 47 (Type -> TypeLit .)
    SEMICOLON       reduce using rule 47 (Type -> TypeLit .)
    RPAREN          reduce using rule 47 (Type -> TypeLit .)
    COMMA           reduce using rule 47 (Type -> TypeLit .)


state 46

    (51) ArrayType -> LBRACK . INT RBRACK Type
    (52) ArrayType -> LBRACK . INT RBRACK ID
    (53) SliceType -> LBRACK . RBRACK Type
    (54) SliceType -> LBRACK . RBRACK ID

    INT             shift and go to state 68
    RBRACK          shift and go to state 69


state 47

    (48) TypeLit -> ArrayType .

    RPAREN          reduce using rule 48 (TypeLit -> ArrayType .)
    COMMA           reduce using rule 48 (TypeLit -> ArrayType .)
    ASSIGN          reduce using rule 48 (TypeLit -> ArrayType .)
    SEMICOLON       reduce using rule 48 (TypeLit -> ArrayType .)


state 48
